Fixed PowerShell script: was not working if the path to the webfx-cli contains spaces

--- a/src/main/asciidoc/webfx-docs.adoc
+++ b/src/main/asciidoc/webfx-docs.adoc
@@ -292,7 +292,7 @@ source ~/.bash_profile <2>
 ----
 If (!(Test-Path $profile)) { New-Item -Path $profile -Force } <1>
 
-"`r`nfunction webfx([String[]] [Parameter(ValueFromRemainingArguments)] `$params) { $((Get-Item .).fullName)\webfx.bat `$params }`r`n" >> $profile <2>
+"`r`nfunction webfx([String[]] [Parameter(ValueFromRemainingArguments)] `$params) { . '$((Get-Item .).fullName)\webfx.bat' `$params }`r`n" >> $profile <2>
 
 If ($(Get-ExecutionPolicy) -eq "Restricted") { Start-Process powershell -Verb runAs "Set-ExecutionPolicy -ExecutionPolicy RemoteSigned" -Wait } <3>
 
