--- a/src/main/asciidoc/webfx-docs.adoc
+++ b/src/main/asciidoc/webfx-docs.adoc
@@ -399,7 +399,7 @@ You can build your application using the `webfx build` command, passing it the f
 | Linux
 | --openjfx-desktop
 | Linux (embed JVM)
-|
+| ubuntu-devtools*
 | executable, .rpm, .deb
 
 | macOS
@@ -446,7 +446,7 @@ You can build your application using the `webfx build` command, passing it the f
 
 |===
 
-[small]#* these tools are optional, allowing you to create a Windows installer#
+[small]#* these tools are optional, it's only if you want to create installers#
 
 Some builds require additional pieces of software to work. You can use `webfx bump graalvm`, `webfx bump wix`, etc... to install or upgrade them on your build machine. Also on macOS, for builds other than -gwt and -openjfx-fatjar, Xcode must be installed and configured for a proper code signing (otherwise the executables will refuse to run).
 
